--- a/README
+++ b/README
@@ -25,7 +25,8 @@ Works with Rails 1.X as well as 2.X, including 2.2.2
   * text_area       (attribute:symbol, options_hash:hash)
   * check_box       (attribute:symbol, options_hash:hash)
   * radio_buttons   (attribute:symbol, options_hash:hash)
-  * submit_button   (label:string)  - create a submit button in a definition item
+  * submit_button   (label:string)   - create a submit button in a definition item
+  * image_submit_button (src:string) - create an image submit button in a definition item
   
 These methods can be used within the context of a form builder or within any form as simple helper tags:
 
